--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <head>
     <meta charset="utf-8"/>
     <title>Javad Hamidi | Portfolio Site</title>
+
     <link rel="stylesheet" href="styles/default.css">
+    <link rel="icon" type="image/png" href="images/favicon.png"/>
 </head>
 
 <body>
@@ -33,8 +35,10 @@
             cursor.style.top = e.clientY + 'px'; 
         });
 
+        document.addEventListener('mouseenter', e => { cursor.style.display = 'block' });
+        document.addEventListener('mouseleave', e => { cursor.style.display = 'none' });
+
         document.getElementsByClassName('desktop-icon')[0].addEventListener('click', e => {
-            console.log('clc');
             document.getElementsByClassName('icon-title')[0].classList.add("selected"); 
         });
 
@@ -42,9 +46,7 @@
             window.open('https://github.com/javadhamidi', '_blank');
             win.focus();
         });
-
-        document.addEventListener('mouseenter', e => { cursor.style.display = 'block' });
-        document.addEventListener('mouseleave', e => { cursor.style.display = 'none' });
     </script>
+
 </body>
 </html>
