Added a link to my (currently barren) LinkedIn

--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
                     <span class="i">Javad Hamidi Resume.pdf</span>
                 </div>
             </div>
+            <div class="i desktop-icon"
+                ondblclick="window.open('https://www.linkedin.com/in/javadhamidiv/', '_blank'); window.focus();">
+                <div class="i icon-logo">
+                    <img class="i" src="images/LI-In-Bug.png" alt="">
+                </div>
+                <div class="i shortcut-icon"></div>
+                <div class="i icon-title">
+                    <span class="i">Connect on LinkedIn</span>
+                </div>
+            </div>
         </div>
         
         <div id="window" src=""></div>
